--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         }    
         h1{
             color:rgb(0, 0, 0);
-            background: rgb( 255, 255, 255);
+            background-color: rgb( 255, 255, 255);
         }
         h2{
             
