--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         h1{
             color:rgb(0, 0, 0);
             background-color: rgb( 255, 255, 255);
+            text-align:center;
         }
         h2{
             
