--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             color:rgb(0, 0, 0);
             background-color: rgb( 255, 255, 255);
             text-align:center;
+            font-family: "Courier Header";
         }
         h2{
             
