--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             color:rgb(0, 0, 0);
             background-color: rgb( 255, 255, 255);
             text-align:center;
-            font-family: "Courier Header";
+            font-family: Courier;
         }
         h2{
             
