--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         {
             color: rgb(0, 0, 0);
             font-size: 20px;
+            font-family: Courier;
+   
         }    
         h1
         {
@@ -35,14 +37,12 @@
         h4
         {
             color:rgb(0, 0, 0);
-            background-color: rgb( 255, 255, 255);
             font-family: Courier;
             font-size: 20px;
         }
         h5
         {
             color:rgb(0, 0, 0);
-            background-color: rgb( 255, 255, 255);
             font-family: Courier;
             font-size: 20px;
         }
