--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         {
         background: rgb(179, 48, 48);
         }
-        p
+        p//////////////////////////////////////////Body Pararaph 1/////////////////////////////////////////////////
         {
             color: rgb(0, 0, 0);
             font-size: 20px;
             font-family: Courier;
    
         }    
-        h1
+        h1////////////////////////////////////////Title////////////////////////////////////////////////////////
         {
             color:rgb(0, 0, 0);
             background-color: rgb( 255, 255, 255);
@@ -21,26 +21,26 @@
             font-family: Courier;
             font-size: 40px;
         }
-        h2
+        h2/////////////////////////////////////////Page Selector//////////////////////////////////////////////////
         {
             background-color: rgb( 255, 255, 255);
             text-align:center;
             font-family: Courier;
             font-size: 30px;
         }
-        h3
+        h3///////////////////////////////////////////Image/////////////////////////////////////////////////////////////
         {
             border: 10px;
             border-color: rgb(255,255,255);
             text-align:center;
         }
-        h4
+        h4//////////////////////////////////////////////Bullet-Point Singer Name//////////////////////////////////////
         {
             color:rgb(0, 0, 0);
             font-family: Courier;
             font-size: 20px;
         }
-        h5
+        h5/////////////////////////////////////////////////Conclusion///////////////////////////////////////////////////
         {
             color:rgb(0, 0, 0);
             font-family: Courier;
