--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         
         <h1>Maroon 5</h1>
         
-        <h2><a target="_blank" href="http://home.web.cern.ch/topics/birth-web">V</a>     Songs About Jane    It Wont Be Soon Before Long
+        <h2><a target="https://aryasasik.github.io/AryaSasiK.github.io/index2.html">V</a>     Songs About Jane    It Wont Be Soon Before Long
       Overexposed             Hands All Over</h2>
         <h3><img src="http://i2.wp.com/www.dailycal.org/assets/uploads/2017/08/maroon5_interscope-900x580.jpg"></h3>
         <p>The amazing Pop band Maroon 5 continues to take the world by storm. 
