--- a/index2.html
+++ b/index2.html
@@ -54,7 +54,7 @@
         
         <h1>Maroon 5</h1>
         
-        <h2><a target="_blank" href="http://home.web.cern.ch/topics/birth-web">V</a>     Songs About Jane    It Wont Be Soon Before Long
+        <h2><a target="_blank" href="https://aryasasik.github.io/AryaSasiK.github.io/index2.html">V</a>     Songs About Jane    It Wont Be Soon Before Long
       Overexposed             Hands All Over</h2>
         <h3><img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/53/Maroon_5_-_V_%28Official_Album_Cover%29.png/220px-Maroon_5_-_V_%28Official_Album_Cover%29.png"></h3>
         <p>This album was released on August 29, 2014. It consists of many good songs that are realy good.
