--- a/index.html
+++ b/index.html
@@ -88,27 +88,27 @@
             <tbody>
                 <tr>
                     <td>Songs About Jane</td>
-                    <td>rabbit</td>
+                    <td><img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/be/Maroon_5_-_Songs_About_Jane.png/220px-Maroon_5_-_Songs_About_Jane.png"></td>
                     <td>This is a Pop-Rock, Funk-Rock, and Blue-Eyed Soul Album</td>
                 </tr>
                 <tr>
                     <td>It Wont Be Soon Before Long</td>
-                    <td>cat</td>
+                    <td><img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9b/Maroon_5_-_It_Won%27t_Be_Soon_Before_Long.png/220px-Maroon_5_-_It_Won%27t_Be_Soon_Before_Long.png"></td>
                     <td>This is a Pop Rock, Disco, Funy Rock, and Blue-Eyed Soul Album</td>
                 </tr>
                 <tr>
                     <td>Overexposed</td>
-                    <td>cat</td>
+                    <td><img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/77/Maroon_5_-_Overexposed.png/220px-Maroon_5_-_Overexposed.png"></td>
                     <td>This is a Pop and Pop-Rock Album</td>
                 </tr>
                 <tr>
                     <td>Hands All Over</td>
-                    <td>cat</td>
+                    <td><img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/71/Maroon_5_-_Hands_All_Over.png/220px-Maroon_5_-_Hands_All_Over.png"></td>
                     <td>This is a Pop and Blye-Eyed Soul Album</td>
                 </tr>
                 <tr>
                     <td>V</td>
-                    <td>cat</td>
+                    <td><img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/53/Maroon_5_-_V_%28Official_Album_Cover%29.png/220px-Maroon_5_-_V_%28Official_Album_Cover%29.png"></td>
                     <td>This is a Pop, Rock, and Electro Album </td>
                 </tr>
             </tbody>
