--- a/index3.html
+++ b/index3.html
@@ -45,9 +45,9 @@
 color:#00FF00;>
 Simple Login Page
 </h5>
-        <form name="login">
-              Username<input type="text" name="Maroon5"/>
-Password<input type="password" name="totalfan"/>
+<form name="login">
+Username<input type="text" name="userid"/>
+Password<input type="password" name="pswrd"/>
 <input type="button" onclick="check(this.form)" value="Login"/>
 <input type="reset" value="Cancel"/>
 </form>
@@ -64,7 +64,7 @@ function check(form)/*function to check userid & password*/
    alert("Error Password or Username")/*displays error message*/
   }
 }
-</script>      
+</script>  
     </body>
 </html>
 
