--- a/index2.html
+++ b/index2.html
@@ -66,6 +66,25 @@
             <li>This Summer (Guitarist/Keyboard)</li>
             <li>Feelings (Keyboard)</li>
         </h4>
+      
+      
+        <p>Select your favorite albumn:</p>
+<form action="/action_page.php">
+  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Internet Explorer">V<br>
+  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Firefox">Songs About Jane<br>
+  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Opera">It Wont Be Soon Before Long<br>
+  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Google Chrome">Overexposed<br>
+  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Safari">Hands All Over<br><br>
+
+  Your favorite albumn is: <input type="text" id="result">
+  <input type="submit" value="Submit form">
+</form>
+
+<script>
+function myFunction(browser) {
+    document.getElementById("result").value = browser;
+}
+</script>
     </body>
 </html>
 
