--- a/index2.html
+++ b/index2.html
@@ -70,11 +70,11 @@
       
         <p>Select your favorite albumn:</p>
 <form action="/action_page.php">
-  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Internet Explorer">V<br>
-  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Firefox">Songs About Jane<br>
-  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Opera">It Wont Be Soon Before Long<br>
-  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Google Chrome">Overexposed<br>
-  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Safari">Hands All Over<br><br>
+  <input type="radio" name="browser" onclick="myFunction(this.value)" value="V">V<br>
+  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Songs About Jane">Songs About Jane<br>
+  <input type="radio" name="browser" onclick="myFunction(this.value)" value="It Wont Be Soon Before Long">It Wont Be Soon Before Long<br>
+  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Overexposed">Overexposed<br>
+  <input type="radio" name="browser" onclick="myFunction(this.value)" value="Hands All Over">Hands All Over<br><br>
 
   Your favorite albumn is: <input type="text" id="result">
   <input type="submit" value="Submit form">
