--- a/index2.html
+++ b/index2.html
@@ -82,7 +82,7 @@
 
 <script>
 function myFunction(browser) {
-    document.getElementById("https://aryasasik.github.io/AryaSasiK.github.io/index4.html").value = browser;
+    document.getElementById("result").value = browser;
 }
 </script>
     </body>
