--- a/index2.html
+++ b/index2.html
@@ -69,7 +69,7 @@
       
       
         <p>Select your favorite albumn:</p>
-<form action="/https://aryasasik.github.io/AryaSasiK.github.io/index4.html">
+<form action="/index4.html">
   <input type="radio" name="browser" onclick="myFunction(this.value)" value="V">V<br>
   <input type="radio" name="browser" onclick="myFunction(this.value)" value="Songs About Jane">Songs About Jane<br>
   <input type="radio" name="browser" onclick="myFunction(this.value)" value="It Wont Be Soon Before Long">It Wont Be Soon Before Long<br>
